# NexelBI

.github/workflows/: release.yml
client/src/components/: Toolbar.tsx
native/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QUICK_START.md  README.md  build.sh
native/resources/: AppIcon.icns  generate_icon.py  resources.qrc
native/src/: main.cpp
native/src/core/: Cell.cpp  Cell.h  CellRange.cpp  CellRange.h  ConditionalFormatting.cpp  ConditionalFormatting.h  DependencyGraph.cpp  DependencyGraph.h  FillSeries.cpp  FillSeries.h  FormulaEngine.cpp  FormulaEngine.h  FormulaMetadata.h  NumberFormat.cpp  NumberFormat.h  Spreadsheet.cpp  Spreadsheet.h  TableStyle.h  UndoManager.cpp  UndoManager.h
native/src/database/: DatabaseManager.cpp  DatabaseManager.h  DocumentRepository.cpp  DocumentRepository.h
native/src/services/: ClaudeService.cpp  ClaudeService.h  CsvService.cpp  CsvService.h  DocumentService.cpp  DocumentService.h  XlsxService.cpp  XlsxService.h
native/src/ui/: CellDelegate.cpp  CellDelegate.h  ChartWidget.cpp  ChartWidget.h  ChatPanel.cpp  ChatPanel.h  ConditionalFormatDialog.cpp  ConditionalFormatDialog.h  DataValidationDialog.cpp  DataValidationDialog.h  FindReplaceDialog.cpp  FindReplaceDialog.h  FormatCellsDialog.cpp  FormatCellsDialog.h  FormulaBar.cpp  FormulaBar.h  FormulaPopupDelegate.h  GoToDialog.cpp  GoToDialog.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  ShapeWidget.cpp  ShapeWidget.h  SpreadsheetModel.cpp  SpreadsheetModel.h  SpreadsheetView.cpp  SpreadsheetView.h  Toolbar.cpp  Toolbar.h
